crates/stepflow-main/tests/snapshots/test_run__run_tests@python_math.yaml-2.snap
---
source: crates/stepflow-main/tests/test_run.rs
description: case 1
expression: result
info:
  m: 8
  n: 10
input_file: crates/stepflow-main/tests/flows/python_math.yaml
---
outcome: success
result:
  m_plus_n: 18
  m_plus_n_times_n: 180
  m_times_n: 80
