crates/stepflow-main/tests/snapshots/test_run__run_tests@python_math.yaml.snap
---
source: crates/stepflow-main/tests/test_run.rs
description: case 0
expression: result
info:
  m: 8
  n: 5
input_file: crates/stepflow-main/tests/flows/python_math.yaml
---
outcome: success
result:
  m_plus_n: 13
  m_plus_n_times_n: 65
  m_times_n: 40
